--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@apollo/client": "^4.0.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "express-slow-down": "^3.0.0",
     "graphql": "^16.11.0"
   },
   "devDependencies": {
