--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "express-slow-down": "^3.0.0",
+    "express-validator": "^7.2.1",
     "graphql": "^16.11.0"
   },
   "devDependencies": {
